--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -24,13 +24,13 @@
             <div class="menu-item">Для учащихся</div>
         </div>
 
-        <div style="height: 200px"></div>
         <div class="blue-line">
-            <div class="content">
-                <h1>Автошкола ООО “Пилот-М”</h1>
-                <h2>в центре города станция метро пл. Тукая</h2>
-            </div>
+                <div class="blue-line-title">Автошкола ООО “Пилот-М”</div>
+                <div class="blue-line-subtitle">в центре города станция метро пл. Тукая</div>
+                <div class="blue-line-right-info">sdgf dfg dfg dfg dfg</div>
+                <div class="blue-line-right-info">sdgf dfg dfg dfg dfg</div>
         </div>
+        <h1>Контактная информация</h1>
 
 
     </div>
