--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -30,7 +30,59 @@
                 <div class="blue-line-right-info">sdgf dfg dfg dfg dfg</div>
                 <div class="blue-line-right-info">sdgf dfg dfg dfg dfg</div>
         </div>
-        <h1>Контактная информация</h1>
+        <div>Контактная информация</div>
+        <p>г. Казань,
+            ул, Бутлерова,
+            дом 30
+            тел: +7(843) 267-58-08
+            тел: +7 (927)-400-06-65
+            г. Казань,
+            ул. Профсоюзная,
+            дом 40-42
+            тел: +7(843) 214-34-14
+            тел: +7 (927)-400-06-64
+        </p>
+
+        <div>Даты набора</div>
+        <p>21 марта
+            ОБУЧЕНИЕ
+            УТРОМ С 10:00-12:30
+            ДНЕМ   С 13:00-15:30
+            ВЕЧЕРОМ С 18:15- 21:00
+            ИЛИ ПО ВАШЕМУ ИНДИВИДУАЛЬНОМУ РАСПИСАНИЮ
+        </p>
+
+        <p>29 марта
+            ОБУЧЕНИЕ
+            УТРОМ С 11:00-13:30
+            ДНЕМ С 14:00-16:30
+            ВЕЧЕРОМ С 18:15- 21:00
+            ИЛИ ПО ВАШЕМУ
+            ИНДИВИДУАЛЬНОМУ
+            РАСПИСАНИЮ
+        </p>
+
+        <p>3 апреля
+            ОБУЧЕНИЕ
+            УТРОМ С 12:00-14:30
+            ДНЕМ С 15:00-17:30
+            ВЕЧЕРОМ С 18:15- 21:00
+            ИЛИ ПО ВАШЕМУ
+            ИНДИВИДУАЛЬНОМУ
+            РАСПИСАНИЮ
+        </p>
+        <div>Подать заявку</div>
+        <div>Отзывы и предложения</div>
+        <p> Алия.
+            Ура! Я автоледи! думала и 4 мес это долго и как я все выучу!? Легко! Начинала обучаться на Бутлерова, но поменялся график работы и мне тут же предложили варианты, перевели на Профсоюзную 40. Преподаватели оч внимательные, профессионалы, с таким теплом относятся к ученикам, так удачно подбирают инструктора! У меня был  Радик! у него железные нервы и терпение!!!  Всему коллективу благодарна за свое водительское удостоверение!
+        </p>
+        <p> Рамиля.  Я обучалась на Профсоюзной 40-42 , преподаватель Жанна Михайловна, все отлично, так легко и доступно поясняли пдд, запомнилось все без усилий, оч требовательно принимает экзамен, в ГАИ уже не страшно... Инструктор Андрей Владимирович оч обязательный человек, приучал к ответственности и аккуратности на дороге. экзамен сдан с первого раза! замечательная
+            а/ школа, отличный современный класс, чистая машина. Приходите учиться, не пожалеете.
+        </p>
+        <p> Михаил.
+            Огромное спасибо автошколе, преподавателю теории Ильшату Габдулшакуровичу,  первая помощь при дтп оч интересно  и познавательно, инструктору Фаниту за отличные знания и навыки в управлении автомобилем, пдд. Сдал экзамены с первого раза! Рекомендую.
+        </p>
+
 
 
     </div>
