--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,78 +80,14 @@
     font-style: italic;
 }
 
-body {
-    font-weight: 300;
-    font-family: "Helvetica Neue", sans-serif;
-    font-size: 15px;
-    line-height: 1.4;
-    letter-spacing: 0.5px;
-    height: 100%; position: absolute; padding: 0; margin: 0; width: 100%;
-}
-
-.logo{
-    float: left;
-    background: url("../images/Logo.png");
-    background-size: 100%;
-
-    width: 107px;
-    height: 107px;
-}
-
-.menu{
-
-}
-
-.menu-item{
-    display: inline-block;
-    padding-left: 60px;
-
-    height: 107px;
-    line-height: 107px;
+.center {
+    display: block;
+    margin: 10px auto 20px auto !important;
     text-align: center;
-
-    font-size: 22px;
-    color: #0F0E0E;
 }
 
-.content{
-    margin: 28px auto;
-    width: 80%;
-}
-
-h1{
-
-}
-
-h2 {
-
-}
-
-.blue-line{
-    height: 131px;
-
-    width: 100%;
-
-    background: linear-gradient(90.73deg, #4A6491 0.07%, #6A7FA3 99.92%);
-}
-
-.blue-line-title {
-    margin-top: -5px;
-    font-size: 36px;
-    font-weight: 300;
-    color: #FFFFFF;
-    float: left;
-}
-
-.blue-line-subtitle{
-    font-size: 24px;
-    font-weight: 300;
-    color: #FFFFFF;
-    float: left;
-}
-
-.blue-line-right-info {
-    font-size: 24px;
-    font-weight: 300;
-    color: #FFFFFF;
+.title{
+    line-height: 43px;
+    font-size: 25px;
+    margin: 10px 0 10px 0;
 }
