--- a/templates/site/main.html.twig
+++ b/templates/site/main.html.twig
@@ -20,15 +20,17 @@
     <div class="clearfix"></div>
 
     <h2>Даты набора</h2>
-    <p class="info-box">21 марта
+    <div class="info-box">
+        <div class="title">21 марта</div>
         ОБУЧЕНИЕ
         УТРОМ С 10:00-12:30
         ДНЕМ С 13:00-15:30
         ВЕЧЕРОМ С 18:15- 21:00
         ИЛИ ПО ВАШЕМУ ИНДИВИДУАЛЬНОМУ РАСПИСАНИЮ
-    </p>
+    </div>
 
-    <p class="info-box">29 марта
+    <div class="info-box">
+        <div class="title">29 марта</div>
         ОБУЧЕНИЕ
         УТРОМ С 11:00-13:30
         ДНЕМ С 14:00-16:30
@@ -36,9 +38,10 @@
         ИЛИ ПО ВАШЕМУ
         ИНДИВИДУАЛЬНОМУ
         РАСПИСАНИЮ
-    </p>
+    </div>
 
-    <p class="info-box">3 апреля
+    <div class="info-box">
+        <div class="title">3 апреля</div>
         ОБУЧЕНИЕ
         УТРОМ С 12:00-14:30
         ДНЕМ С 15:00-17:30
@@ -46,7 +49,7 @@
         ИЛИ ПО ВАШЕМУ
         ИНДИВИДУАЛЬНОМУ
         РАСПИСАНИЮ
-    </p>
+    </div>
     <div class="clearfix"></div>
 
     <h2>Отзывы и предложения</h2>
