--- a/public/css/site/style.css
+++ b/public/css/site/style.css
@@ -35,23 +35,39 @@ body {
 @media (max-width: 750px) {
     .menu {
         display: none;
+
+        position: fixed;
+        top:100px;
+        left: 0;
+        right: 0;
+        bottom: 0;
+
+        padding: 10%;
+        background-color: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(7px);
+        -webkit-backdrop-filter: blur(7px);
+        width: 100%;
+    }
+
+    .menu-icon{
+        display: block !important;
     }
 
     .logo{
         width: 90px !important;
         height: 90px !important;
-        margin: 20px auto 20px auto !important;
+        margin: -30px auto 20px auto !important;
     }
 
     .header {
         position: fixed;
         top: 0;
         left: 0;
-        background-color: rgba(255, 255, 255, 0.7);
+        background-color: rgba(255, 255, 255, 0.9);
         width: 100%;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        backdrop-filter: blur(4px);
-        -webkit-backdrop-filter: blur(10px);
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+        backdrop-filter: blur(7px);
+        -webkit-backdrop-filter: blur(7px);
     }
 
     .logo-space {
@@ -67,6 +83,26 @@ body {
     margin-right: 20px;
     width: 107px;
     height: 107px;
+}
+
+.menu-icon{
+    display: none;
+    margin: 50px 0 0 28px;
+    width: 45px;
+    height: 30px;
+    background-size: 100% 100% !important;
+    background: url("../../images/Menu.png") no-repeat;
+    cursor: pointer;
+}
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 .menu{
@@ -85,8 +121,10 @@ body {
 }
 
 .menu a{
-    height: 107px;
-    line-height: 107px;
+    height: 87px;
+    line-height: 87px;
+
+    padding: 10px 0;
 
     text-align: right;
     background: none;
@@ -94,6 +132,27 @@ body {
     white-space: nowrap;
     font-size: 22px;
     color: #0F0E0E;
+}
+
+.selected {
+    border-bottom: solid 2px #4A6491 !important;
+}
+
+.dropdown-menu{
+    display: none;
+    position: absolute;
+    background: white;
+    padding: 0 20px 20px 20px;
+    border-radius: 15px;
+    border: 1px solid #999999;
+}
+
+.dropdown-item{
+    display: block;
+    font-size: 18px;
+    height: 30px !important;
+    line-height: 18px !important;
+    padding: 0;
 }
 
 .content{
@@ -131,6 +190,13 @@ a {
     margin-right: 33px;
     box-sizing: border-box;
     float: left;
+}
+
+.info-box .title {
+    font-size: 44px;
+    font-weight: 400;
+    color: #566E98;
+    margin-top: 35px;
 }
 
 .feedback-item{
