--- a/templates/site/about.html.twig
+++ b/templates/site/about.html.twig
@@ -1,1 +1,36 @@
-<div class="content">ABOUT!</div>
+<div class="content">
+    <h1>О АВТОШКОЛЕ ООО "ПИЛОТ-М"</h1>
+    <h2>Приветствие директора</h2>
+    <p>Спасибо, что зашли к нам на страничку! Мы будем рады встретиться  с Вами! Готовы воплотить в реальность Вашу мечту стать водителем! Коллектив профессионалов  с десятилетним опытом ждет Вас, готов делиться своими знания и умениями. Занятия будут познавательными, никакой скуки и тупого заучивания!
+        Нами организованы замечательные аудитории для обучения, собрана библиотека , создан компьютерный класс, обновляется база учебных фильмов , подборка с телепередач, вопросы экзаменационных билетов.
+        Доброжелательные вежливые инструкторы строго следят за надлежащим  состоянием учебных автомобилей. Практические занятия проходят  на современном   автодроме.
+        Администраторы помогут Вам подготовить документы необходимые для обучения и сдачи экзамена в ГИБДД.
+        Мы уверенно вместе с Вами будем двигаться к намеченной цели, оправдаем Ваше доверие.
+        Через четыре месяца Вы грамотный водитель.
+    </p>
+
+    <p>Искренне ваш,
+    И.Г.Губайдуллин
+    ​директор школы</p>
+    <h2>Наша история</h2>
+    <p> Нашей автошколе в  феврале 2018 года исполнилось  10 лет.
+
+        За время добросовестной работы профессиональный коллектив подготовил не одну тысячу водителей транспортных средств.Вместе с нашими обучающимися мы воплотили их мечту в реальность.
+
+        Получив водительское удостоверение , они обрели возможность влиться  в транспортный поток!
+
+        Чувствуют себя там уверенно и спокойно, применяют на практике полученные знания и навыки!
+    </p>
+    <h2>IMG x2</h2>
+    <h2>Наши принципы</h2>
+    <p> С огромной любовью и уважением относится к каждому обучающемуся нашей автошколы.
+
+        С желанием и терпение передавать знания и навыки.
+
+        Всегда с пониманием подходить к создавшейся ситуации и находить самый благоприятный выход.
+    </p>
+    <p>
+        Создать комфортную обстановку для освоения нового дела.
+
+        Вырастить из мечтателя иметь в/у настоящего профессионала знающего и соблюдающего ПДД.</p>
+</div>
