--- a/templates/site/enroll.html.twig
+++ b/templates/site/enroll.html.twig
@@ -1,1 +1,22 @@
-Запись!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+<div class="content">
+    <h1>ЗАПИСЬ НА ОБУЧЕНИЕ</h1>
+    <h2>Документы для регистрации в группе</h2>
+    <div class="info-box">
+        1) Копия паспорта № 1-2. №5
+        2) Номер СНИЛС
+        3) Номер ИНН
+        4) Фото 2 шт 3*4
+        5) Справка нарколога
+        6) Справка психиатра
+        7) Справка общей практики
+    </div>
+
+</div>
+
+
+<div class="center-content">
+    <p>Блок
+        Записи
+        В автошколу
+    </p>
+</div>
