--- a/templates/site/events.html.twig
+++ b/templates/site/events.html.twig
@@ -1,5 +1,38 @@
 <div class="content">
-    <div class="title">ToDo:</div>
-    <div class="title">1)Заполнить эту страницу контентом в for_students.htms.twig</div>
-    <div class="title">2)Продумать аполнить контентом</div>
+    <h1>ДАТЫ МЕРОПРИЯТИЙ</h1>
+    <h2>Занятия</h2>
+    <p>1 мая выходной, 15 мая занятие 1 группы переносится.</p>
+
+    <h2>1 группа</h2>
+    <p class="info-box">
+        Понедельник 18:00
+        Среда 18:00
+    </p>
+
+    <h2>2 группа</h2>
+    <p class="info-box">
+        Вторник 16:00
+        Четверг 16:00
+    </p>
+
+    <h2>3 группа</h2>
+    <p class="info-box">
+        Понедельник 16:00
+        Среда 16:00
+    </p>
+
+    <h2>4 группа</h2>
+    <p class="info-box">
+        Понедельник 18:00
+        Среда 18:00
+    </p>
+
+    <h2>Даты медосмотров</h2>
+    <h2>5 апреля </h2>
+    <p>Окулист</p>
+
+    <h2>Даты экзаменов</h2>
+    <p>Экзамен будет проводится по адресу: улица Актайская,2</p>
+    <h2>1 группа</h2>
+    <p>20 мая</p>
 </div>
