--- a/templates/site/info.html.twig
+++ b/templates/site/info.html.twig
@@ -1,3 +1,22 @@
 <div class="content">
     <div class="title">INFO</div>
+    <p class="information">
+        Основные сведения
+    <br>
+        Структура и органы управления
+        <br>
+        Лицензия
+        <br>
+        Устав
+        <br>
+        Заключение ГИБДД
+        <br>
+        Методические указания по организации образовательного процесса
+        <br>
+        Правила внутреннего распорядка обучающихся
+        <br>
+        Правила внутреннего распорядка сотрудников
+        <br>
+        Свидетельство
+    </p>
 </div>
