--- a/templates/site/resources_for_students.html.twig
+++ b/templates/site/resources_for_students.html.twig
@@ -1,1 +1,10 @@
-sdjkfhlasdjhflsdhflsdfjhglsjdfghlsdfjkghsldfkjhgsldfghsldfkjghsldfkjghsdlfkgjshldfjghsdlfghsdlkfxm;SDFHALSDMXKSGDSKFGHDLSFGSLDKFGHSLDMFKJGHSDFJGHSDFJGLSDLFGHSDLKFJGHSLDFJGHSLDFGJHSDFG
+<div class="content">
+    <h1>РЕСУРСЫ</h1>
+    <h2>ПДД онлайн</h2>
+    <p>1) http://www.pdd24.com/</p>
+    <h2>Образцы документов</h2>
+    <p>1) Заявление на обучение
+        2) Согласие родителей
+        3) Экзаменационный лист
+    </p>
+</div>
