--- a/templates/site/theory_and_practice.html.twig
+++ b/templates/site/theory_and_practice.html.twig
@@ -1,1 +1,19 @@
-sdfj;sdf sdklfj dfgjkdgxdfhjgk xjgfhkxdfjhgxdjhfkg
+<div class="content">
+    <h1>ТЕОРИЯ И ПРАКТИКА</h1>
+    <h2>Теоретические занятия</h2>
+    <p>Вас ждет полная теоретическая база по ПДД РФ, лекции о безопасности на дорогах, ответы на вопросы об ответственности водителя за нарушение ПДД, навыки оказания первой помощи при наличии пострадавших в результате дтп . Теоретические занятия проходят в современно оборудованных аудиториях, имеется компьютерный класс, библиотека, раздаточный материал, психологические тесты, телевизор, проектор, учебные и развивающие фильмы. Возможен повтор лекций в удобное для Вас время, консультации преподавателя, подготовка к теоретическому экзамену. Посещение лекций и решение тестов по темам обязательно.</p>
+    <h2>Практические занятия</h2>
+    <p> К практическим занятия приступаете после начального курса подготовки( правила и знаки)
+        через два месяца с начала обучения на автодроме, на  учебном  маршруте. Предоставляется специально
+        оборудованный дублирующими педалями сцепления и тормоза автомобиль.
+        Мастер  производственного обучения - водитель, педагог, психолог  внимательный, терпеливый,
+        вежливый!
+        Практический экзамен в автошколе принимается комиссией , сдаете на учебном тс и автодроме, маршруте</p>
+    <h2>Внутренний  экзамен и экзамен в ГИБДД.</h2>
+    <p>Внутренний экзамен проводится в учебных классах и на автодроме автошколы.
+        В назначенный день проходит теоретический экзамен, затем практический(площадка и город).
+        Требования: необходимо решить пять билетов без ошибок и выполнить обязательные упражнения управляя тс. При успешной сдаче допускаетесь к экзаменам в ГИБДД.
+        Администрация автошколы готовит пакет документов согласно требований, Вы предоставляете квитанцию гос пошлины.
+        Как правило вся группа сдает экзамен организованно согласно расписания. В исключительных случаях- самостоятельно.Вождение - на автомашинах ГИБДД в один день при успешной сдаче предыдущего этапа: теория- площадка-город. Получение в/у через 3-7 дней.                    УДАЧИ ВАМ НА ДОРОГАХ...........</p>
+
+</div>
