--- a/templates/site/enroll.html.twig
+++ b/templates/site/enroll.html.twig
@@ -1,22 +1,59 @@
 <div class="content">
+
     <h1>ЗАПИСЬ НА ОБУЧЕНИЕ</h1>
+
     <h2>Документы для регистрации в группе</h2>
-    <div class="info-box">
-        1) Копия паспорта № 1-2. №5
-        2) Номер СНИЛС
-        3) Номер ИНН
-        4) Фото 2 шт 3*4
-        5) Справка нарколога
-        6) Справка психиатра
-        7) Справка общей практики
+    <div class="text" style="margin-top: 20px">
+        <div>1) Копия паспорта № 1-2. №5</div>
+        <div>2) Номер СНИЛС</div>
+        <div>3) Номер ИНН</div>
+        <div>4) Фото 2 шт 3*4</div>
+        <div>5) Справка нарколога</div>
+        <div>6) Справка психиатра</div>
+        <div>7) Справка общей практики</div>
     </div>
 
+    <div class="clearfix"></div>
+
+    <div style="margin: 30px;" class="clearfix"></div>
 </div>
 
+<form class="form-send-to-email" action="/" method="post">
+    <div class="content">
+        <h2 style="margin: 0 0 20px 0">Подать заявку</h2>
 
-<div class="center-content">
-    <p>Блок
-        Записи
-        В автошколу
+        <input name="name" class="form-control" placeholder="Имя*">
+        <input name="email" class="form-control" placeholder="Email*">
+        <input name="phone" class="form-control" placeholder="Телефон*">
+
+        <label style="font-size: 20px;">Доп информация/сообщение (не обязательно)
+            <textarea name="phone" class="form-control" style="min-height: 90px"></textarea>
+        </label>
+
+        <input class="button" style="margin-top: 20px" type="submit">
+    </div>
+</form>
+
+<div class="content">
+
+    <h2>Контактная информация</h2>
+    <p class="info-box">
+        г. Казань,
+        ул, Бутлерова,
+        дом 30
+        тел: +7(843) 267-58-08
+        тел: +7 (927)-400-06-65
     </p>
+
+    <p class="info-box">
+        г. Казань,
+        ул. Профсоюзная,
+        дом 40-42
+        тел: +7(843) 214-34-14
+        тел: +7 (927)-400-06-64
+    </p>
+
+    <div class="clearfix"></div>
+
+    <div style="margin: 130px;" class="clearfix"></div>
 </div>
