--- a/templates/site/resources_for_students.html.twig
+++ b/templates/site/resources_for_students.html.twig
@@ -1,10 +1,21 @@
 <div class="content">
     <h1>РЕСУРСЫ</h1>
+
     <h2>ПДД онлайн</h2>
-    <p>1) http://www.pdd24.com/</p>
+    <div class="links">
+        <a href="http://www.pdd24.com/" target="_blank">1) http://www.pdd24.com/</a>
+    </div>
+
+
     <h2>Образцы документов</h2>
-    <p>1) Заявление на обучение
-        2) Согласие родителей
-        3) Экзаменационный лист
-    </p>
+    <div class="links">
+        <a href="#">1) Заявление на обучение</a>
+        <a href="#">2) Согласие родителей</a>
+        <a href="#">3) Экзаменационный лист</a>
+    </div>
+
+    <div class="clearfix"></div>
+
+    <div style="margin: 124px;" class="clearfix"></div>
+
 </div>
