--- a/templates/site/events.html.twig
+++ b/templates/site/events.html.twig
@@ -1,38 +1,51 @@
 <div class="content">
     <h1>ДАТЫ МЕРОПРИЯТИЙ</h1>
     <h2>Занятия</h2>
-    <p>1 мая выходной, 15 мая занятие 1 группы переносится.</p>
+    <div class="text">1 мая выходной, 15 мая занятие 1 группы переносится.</div>
 
-    <h2>1 группа</h2>
-    <p class="info-box">
-        Понедельник 18:00
-        Среда 18:00
-    </p>
+    <div class="info-box">
+        <div class="title">1 группа</div>
+        <div>Понедельник 18:00</div>
+        <div>Среда 18:00</div>
+    </div>
 
-    <h2>2 группа</h2>
-    <p class="info-box">
-        Вторник 16:00
-        Четверг 16:00
-    </p>
+    <div class="info-box">
+        <div class="title">2 группа</div>
+        <div>Вторник 16:00</div>
+        <div>Четверг 16:00</div>
+    </div>
 
-    <h2>3 группа</h2>
-    <p class="info-box">
-        Понедельник 16:00
-        Среда 16:00
-    </p>
+    <div class="info-box">
+        <div class="title">3 группа</div>
+        <div>Понедельник 16:00</div>
+        <div>Среда 16:00</div>
+    </div>
 
-    <h2>4 группа</h2>
-    <p class="info-box">
-        Понедельник 18:00
-        Среда 18:00
-    </p>
+    <div class="info-box">
+        <div class="title">4 группа</div>
+        <div>Понедельник 18:00</div>
+        <div>Среда 18:00</div>
+    </div>
+
+    <div class="clearfix"></div>
+
 
     <h2>Даты медосмотров</h2>
-    <h2>5 апреля </h2>
-    <p>Окулист</p>
+    <div class="info-box">
+        <div class="title">5 апреля</div>
+        Окулист
+    </div>
+
+    <div class="clearfix"></div>
 
     <h2>Даты экзаменов</h2>
-    <p>Экзамен будет проводится по адресу: улица Актайская,2</p>
-    <h2>1 группа</h2>
-    <p>20 мая</p>
+    <div class="text">Экзамен будет проводится по адресу: улица Актайская,2</div>
+    <div class="info-box">
+        <div class="title">1 группа</div>
+        20 мая
+    </div>
+
+    <div class="clearfix"></div>
+
+    <div style="margin: 124px;" class="clearfix"></div>
 </div>
