Admin panel finished

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -15,6 +15,7 @@
 {% block javascripts %}
     <script src="{{ asset('js/jquery.js') }}"></script>
     <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
+    <script src="{{ asset('js/datepicker-ru.js') }}"></script>
     <script src="{{ asset('js/finder.js') }}"></script>
     <script src="{{ asset('js/buttonsDistributor.js') }}"></script>
     <script src="{{ asset('js/jquery.tabledit.js') }}"></script>
