--- a/templates/site/main.html.twig
+++ b/templates/site/main.html.twig
@@ -1,5 +1,45 @@
 <div class="content">
 
+    {% if datesOfAdmission %}
+
+        <h2 style="margin-bottom: -20px;">Даты набора</h2>
+
+        {% set mnths = ['','января','февраля','марта','апреля','мая','июня','июля','августа','сентября','октября','ноября','декабря'] %}
+
+        {% for item in datesOfAdmission %}
+            <div class="info-box">
+                <div class="title">{{ item.date | date("j") }} {{ mnths[item.date |date("n")] }}</div>
+                {{ item.text }}
+            </div>
+        {% endfor %}
+
+        <div class="clearfix"></div>
+
+    {% endif %}
+
+
+    <h2>Стоимость обучения</h2>
+    <div class="text">
+        Обучение водителей категории «В»:
+        <div>-Механическая коробка -25000 (двадцать пять тысяч рублей)</div>
+        <div>-Автоматическая коробка передач-28000 (двадцать восемь тысяч рублей)</div>
+    </div>
+    <div class="clearfix"></div>
+
+    {% if promotion %}
+
+        <h2>Наши преимущества</h2>
+
+        {% for item in promotion %}
+            <div class="text">
+                -{{ item.text }}
+            </div>
+        {% endfor %}
+
+        <div class="clearfix"></div>
+
+    {% endif %}
+
     <h2>Контактная информация</h2>
     <p class="info-box">
         г. Казань,
@@ -19,63 +59,6 @@
 
     <div class="clearfix"></div>
 
-    <h2>Даты набора</h2>
-    <div class="info-box">
-        <div class="title">21 марта</div>
-        ОБУЧЕНИЕ
-        УТРОМ С 10:00-12:30
-        ДНЕМ С 13:00-15:30
-        ВЕЧЕРОМ С 18:15- 21:00
-        ИЛИ ПО ВАШЕМУ ИНДИВИДУАЛЬНОМУ РАСПИСАНИЮ
-    </div>
-
-    <div class="info-box">
-        <div class="title">29 марта</div>
-        ОБУЧЕНИЕ
-        УТРОМ С 11:00-13:30
-        ДНЕМ С 14:00-16:30
-        ВЕЧЕРОМ С 18:15- 21:00
-        ИЛИ ПО ВАШЕМУ
-        ИНДИВИДУАЛЬНОМУ
-        РАСПИСАНИЮ
-    </div>
-
-    <div class="info-box">
-        <div class="title">3 апреля</div>
-        ОБУЧЕНИЕ
-        УТРОМ С 12:00-14:30
-        ДНЕМ С 15:00-17:30
-        ВЕЧЕРОМ С 18:15- 21:00
-        ИЛИ ПО ВАШЕМУ
-        ИНДИВИДУАЛЬНОМУ
-        РАСПИСАНИЮ
-    </div>
-    <div class="clearfix"></div>
-
-    <h2>Отзывы и предложения</h2>
-    <p class="feedback-item"> Алия.
-        Ура! Я автоледи! думала и 4 мес это долго и как я все выучу!? Легко! Начинала обучаться на Бутлерова, но
-        поменялся график работы и мне тут же предложили варианты, перевели на Профсоюзную 40. Преподаватели оч
-        внимательные, профессионалы, с таким теплом относятся к ученикам, так удачно подбирают инструктора! У
-        меня
-        был Радик! у него железные нервы и терпение!!! Всему коллективу благодарна за свое водительское
-        удостоверение!
-    </p>
-    <p class="feedback-item"> Рамиля. Я обучалась на Профсоюзной 40-42 , преподаватель Жанна Михайловна, все
-        отлично, так легко и доступно
-        поясняли пдд, запомнилось все без усилий, оч требовательно принимает экзамен, в ГАИ уже не страшно...
-        Инструктор Андрей Владимирович оч обязательный человек, приучал к ответственности и аккуратности на
-        дороге.
-        экзамен сдан с первого раза! замечательная
-        а/ школа, отличный современный класс, чистая машина. Приходите учиться, не пожалеете.
-    </p>
-    <p class="feedback-item"> Михаил.
-        Огромное спасибо автошколе, преподавателю теории Ильшату Габдулшакуровичу, первая помощь при дтп оч
-        интересно и познавательно, инструктору Фаниту за отличные знания и навыки в управлении автомобилем, пдд.
-        Сдал экзамены с первого раза! Рекомендую.
-    </p>
-
-    <br/>
-    <br/>
+    <div style="margin: 124px;" class="clearfix"></div>
 
 </div>
